--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <title></title>
   </head>
   <body>
-    <p>There seems to be nothing here.</p>
+    Click to see a Privacy Policy for one of Blonque's apps:
+    <a href="https://astraeablonk.github.io/PrivacyPolicies/Privacy_Policy_Linguistic_Heroes.pdf">Privacy Policy Linguistic Heroes</a>
+    <a href="https://astraeablonk.github.io/PrivacyPolicies/Privacy_Policy_Commit_Sudoku.pdf">Privacy Policy Commit Sudoku</a>
   </body>
 </html>
