--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     Click to see a Privacy Policy for one of Blonque's apps:
-    <a href="https://astraeablonk.github.io/PrivacyPolicies/Privacy_Policy_Linguistic_Heroes.pdf">Privacy Policy Linguistic Heroes</a>
-    <a href="https://astraeablonk.github.io/PrivacyPolicies/Privacy_Policy_Commit_Sudoku.pdf">Privacy Policy Commit Sudoku</a>
+    <br><a href="https://astraeablonk.github.io/PrivacyPolicies/Privacy_Policy_Linguistic_Heroes.pdf">Privacy Policy Linguistic Heroes</a>
+    <br><a href="https://astraeablonk.github.io/PrivacyPolicies/Privacy_Policy_Commit_Sudoku.pdf">Privacy Policy Commit Sudoku</a>
   </body>
 </html>
