Change pdf link to html link for Commit Sudoku's Privacy Policy

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <body>
     Click to see a Privacy Policy for one of Blonque's apps:
     <br><a href="https://astraeablonk.github.io/PrivacyPolicies/Privacy_Policy_Linguistic_Heroes.pdf">Privacy Policy Linguistic Heroes</a>
-    <br><a href="https://astraeablonk.github.io/PrivacyPolicies/Privacy_Policy_Commit_Sudoku.pdf">Privacy Policy Commit Sudoku</a>
+    <br><a href="https://astraeablonk.github.io/PrivacyPolicies/Privacy_Policy_Commit_Sudoku.html">Privacy Policy Commit Sudoku</a>
   </body>
 </html>
