Update Privacy Policy 2024-06-01

--- a/PrivacyPolicies/Privacy_Policy_Commit_Sudoku.html
+++ b/PrivacyPolicies/Privacy_Policy_Commit_Sudoku.html
@@ -29,6 +29,14 @@
     <br>
     <br>We do not employ third-party companies and individuals to provide our Service.
     <br>
+    <br><b>Opt-Out Rights</b>
+    <br>
+    <br>Since we do not collect any data on your use of the Service, there is no procedure to opt out of data collection.
+    <br>
+    <br><b>Data Retention Policy</b>
+    <br>
+    <br>We do not retain any of your data.
+    <br>
     <br><b>Security</b>
     <br>
     <br>We value your trust in not providing us with your Personal Information, thus we are striving to use commercially acceptable means of protecting our data void. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.
@@ -41,7 +49,11 @@
     <br>
     <br>We might update our Privacy Policy at some point in the future. Thus, you are advised to review this page regularly to see if we have done so. We will notify you of any changes by posting the new Privacy Policy on this page.
     <br>
-    <br>This policy is effective as of 2022-02-02.
+    <br>This policy is effective as of 2024-06-01.
+    <br>
+    <br><b>Your Consent</b>
+    <br>
+    <br>By using the Application, you are consenting to the lack of processing of your information as set forth in this Privacy Policy now and as amended by us.
     <br>
     <br><b>Contact Us</b>
     <br>
